--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@openrouter/ai-sdk-provider": "^0.4.5",
     "@tailwindcss/vite": "^4.0.1",
+    "ai": "^4.2.8",
     "axios": "^1.7.9",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
